--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -5,5 +5,8 @@ directories:
 files:
   - dist/**
   - dist-electron/electron/**
+npmRebuild: false
+buildDependenciesFromSource: false
+asar: true
 win:
   target: nsis
