ci(security): normalize electron-builder output from electron-dist/win-unpacked to dist/win-unpacked (ADR-0005)

--- a/.github/workflows/security-unified.yml
+++ b/.github/workflows/security-unified.yml
@@ -327,22 +327,30 @@ jobs:
           npx electron-builder --dir
 
           # Adapt artifact path for GitHub Actions compatibility
-          # electron-builder outputs to release/${version}/win-unpacked/
-          # GitHub Actions expects dist/win-unpacked/
+          # electron-builder outputs to electron-dist/win-unpacked (our config)
+          # or release/${version}/win-unpacked (default); we normalize to dist/win-unpacked/
           $target = "dist/win-unpacked"
           if (Test-Path $target) {
             Write-Host "Electron builder output already present at $target"
           } else {
-            $dir = Get-ChildItem -Path release -Recurse -Directory -Filter "win-unpacked" -ErrorAction SilentlyContinue | Select-Object -First 1
-            if ($dir) {
-              Write-Host "Found electron-builder output: $($dir.FullName)"
+            $edist = Join-Path 'electron-dist' 'win-unpacked'
+            if (Test-Path -LiteralPath $edist) {
+              Write-Host "Found electron-dist output: $edist"
               New-Item -ItemType Directory -Force -Path $target | Out-Null
-              Copy-Item -Path (Join-Path $dir.FullName '*') -Destination $target -Recurse -Force
-              Write-Host "Adapted artifact path for GitHub Actions: $target/"
+              Copy-Item -Path (Join-Path $edist '*') -Destination $target -Recurse -Force
+              Write-Host "Adapted artifact path from electron-dist to: $target/"
             } else {
-              Write-Host "electron-builder output not found in release/ directory"
-              Get-ChildItem -Path release -Recurse -Include *.exe -ErrorAction SilentlyContinue | ForEach-Object { Write-Host $_.FullName }
-              exit 1
+              $dir = Get-ChildItem -Path release -Recurse -Directory -Filter "win-unpacked" -ErrorAction SilentlyContinue | Select-Object -First 1
+              if ($dir) {
+                Write-Host "Found release output: $($dir.FullName)"
+                New-Item -ItemType Directory -Force -Path $target | Out-Null
+                Copy-Item -Path (Join-Path $dir.FullName '*') -Destination $target -Recurse -Force
+                Write-Host "Adapted artifact path for GitHub Actions: $target/"
+              } else {
+                Write-Host "electron-builder output not found in electron-dist/ or release/"
+                Get-ChildItem -Path electron-dist,release -Recurse -Include *.exe -ErrorAction SilentlyContinue | ForEach-Object { Write-Host $_.FullName }
+                exit 1
+              }
             }
           }
 
