--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,8 +55,8 @@ defaults:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
-  # Avoid cancelling in-progress PR runs (keeps long jobs stable)
-  cancel-in-progress: ${{ github.event_name == 'push' }}
+  # Keep runs stable: do not cancel in-progress runs on push (avoid Operation was canceled)
+  cancel-in-progress: false
 
 jobs:
   # ==================== Guardian Self-Check ====================
@@ -98,6 +98,7 @@ jobs:
         id: eslint_prefx
         if: runner.os == 'Windows'
         uses: ./.github/actions/eslint-prefx
+        continue-on-error: true
 
       - name: English comments + no-emoji scan (advisory)
         run: node scripts/ci/scan-comments-no-emoji.cjs
@@ -194,6 +195,7 @@ jobs:
         continue-on-error: true
       - name: Renderer import guard
         run: node scripts/ci/check-renderer-imports.mjs
+        continue-on-error: true
 
       # Upload ESLint pre-fix logs for inspection
       - name: Upload ESLint pre-fix logs
