ci(ci): add Java 17 setup for SonarCloud@v5 to fix workflow error (ADR-0005, ADR-0003)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -313,6 +313,9 @@ jobs:
       - name: Setup Java (for SonarScanner)
         uses: actions/setup-java@v4
         with:
+          distribution: 'temurin'
+          java-version: '17'
+        with:
           distribution: temurin
           java-version: '17'
       - name: Install dependencies
