ci(ci): cap ESLint pre-fix runtime (CI_PREFX_TIMEOUT_SEC=60) to prevent guardian job timeout

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,6 +98,8 @@ jobs:
         id: eslint_prefx
         if: runner.os == 'Windows'
         uses: ./.github/actions/eslint-prefx
+        env:
+          CI_PREFX_TIMEOUT_SEC: '60'
         continue-on-error: true
 
       - name: English comments + no-emoji scan (advisory)
