--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,6 +106,8 @@ jobs:
         id: eslint_prefx
         if: runner.os == 'Windows'
         uses: ./.github/actions/eslint-prefx
+        env:
+          CI_PREFX_TIMEOUT_SEC: '60'
         continue-on-error: true
 
       - name: English comments + no-emoji scan (advisory)
@@ -348,7 +350,7 @@ jobs:
         continue-on-error: true
       - name: SonarCloud Scan
         if: ${{ env.SONAR_TOKEN != '' }}
-        uses: SonarSource/sonarcloud-github-action@v2
+        uses: SonarSource/sonarcloud-github-action@v5
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: https://sonarcloud.io
@@ -366,8 +368,6 @@ jobs:
         env:
           SONAR_HOST_URL: https://sonarcloud.io
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          timeout-minutes: 10
       - name: Sonar summary
         if: always()
         run: |
