ci(config): add workflow_dispatch trigger to Configuration Management workflow

--- a/.github/workflows/config-management.yml
+++ b/.github/workflows/config-management.yml
@@ -19,6 +19,8 @@ on:
   pull_request:
     branches: [main]
 
+  workflow_dispatch:
+
 env:
   NODE_ENV: ${{ github.ref == 'refs/heads/main' && 'production' || 'development' }}
   RELEASE_PREFIX: ${{ github.ref == 'refs/heads/main' && 'prod' || 'dev' }}
