ci(workflows): add workflow_dispatch to selected workflows to allow manual dispatch via GH App (ADR-0005)

--- a/.github/workflows/staged-release.yml
+++ b/.github/workflows/staged-release.yml
@@ -11,6 +11,7 @@ defaults:
 
 on:
   workflow_dispatch:
+  workflow_dispatch:
     inputs:
       run_e2e:
         description: 'Run optional E2E perf smoke after build'
