--- a/.github/workflows/tasks-governance.yml
+++ b/.github/workflows/tasks-governance.yml
@@ -16,6 +16,7 @@ env:
   CACHE_STRATEGY: 'aggressive'
 
 on:
+  workflow_dispatch:
   pull_request:
     paths:
       - 'docs/architecture/overlays/**'
