--- a/.github/workflows/pr-gatekeeper.yml
+++ b/.github/workflows/pr-gatekeeper.yml
@@ -2,6 +2,7 @@ name: PR Status Gatekeeper - Windows CI
 # Windows CI gatekeeper workflow
 
 on:
+  workflow_dispatch:
   pull_request:
     branches: [main, develop]
     types: [opened, synchronize, reopened, ready_for_review]
