--- a/.github/workflows/pr-performance-check.yml
+++ b/.github/workflows/pr-performance-check.yml
@@ -1,6 +1,7 @@
 name: PR Performance Check
 
 on:
+  workflow_dispatch:
   pull_request:
     types: [opened, synchronize, reopened]
     branches: [main, master, develop]
