--- a/.github/workflows/release-prepare.yml
+++ b/.github/workflows/release-prepare.yml
@@ -10,6 +10,7 @@ defaults:
 
 on:
   workflow_dispatch:
+  workflow_dispatch:
     inputs:
       version:
         description: 'Release version (semantic version)'
