ci(build-and-test): fix coverage-gate timeout-minutes YAML indentation to valid scalar (ADR-0005)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -281,8 +281,7 @@ jobs:
       run:
         shell: pwsh
     needs: unit-tests-core
-    timeout-minutes:
-      5
+    timeout-minutes: 5
       # P0: ensure devDependencies installed for job
     env:
       NODE_ENV: development
