ci: touch ci.yml to force direct run via path filter

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 name: CI/CD Pipeline
- # touch: re-enable workflow (activation heartbeat)
+ # touch: re-enable workflow (activation heartbeat, 2025-10-17T13:50Z)
 
 on:
   workflow_dispatch:
