--- a/package.json
+++ b/package.json
@@ -189,7 +189,7 @@
     "phaser": "^3.90.0",
     "posthog-js": "^1.261.4",
     "react": "^19.2.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^19.2.0",
     "remark": "^15.0.1",
     "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.1",
@@ -199,6 +199,8 @@
     "web-vitals": "^5.1.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^19.6.0",
     "@doyensec/electronegativity": "^1.9.1",
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
@@ -206,9 +208,10 @@
     "@eslint/js": "^9.30.1",
     "@pimzino/claude-code-spec-workflow": "^1.4.4",
     "@sentry/cli": "^2.39.0",
+    "@size-limit/file": "^11.2.0",
     "@tailwindcss/postcss": "^4.1.12",
-    "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/dom": "^10.0.0",
+    "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.2.2",
@@ -248,6 +251,7 @@
     "lint-staged": "^16.1.5",
     "prettier": "^3.6.2",
     "rollup-plugin-visualizer": "^6.0.3",
+    "size-limit": "^11.2.0",
     "snyk": "^1.1299.1",
     "tailwindcss": "^4.0.0",
     "tsconfig-paths": "^4.2.0",
@@ -255,11 +259,7 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^7.0.4",
-    "vitest": "^3.2.4",
-    "@size-limit/file": "^11.2.0",
-    "size-limit": "^11.2.0",
-    "@commitlint/cli": "^20.1.0",
-    "@commitlint/config-conventional": "^19.6.0"
+    "vitest": "^3.2.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
