feat(security,perf,ci): harden URL guards; replace insecure randomness; add GitHub security fetcher; Release Health offline stub; ReDoS fixes; Playwright framerate project; perf smoke stabilization; DB checkpoint auto-create; ASCII/BOM gates; quality gates config
- security: strict URL allow-list via parser; block javascript:/data:/vbscript:; CSP suspicious request detection (ADR-0002)
- perf: secure random utils; eliminate Math.random usage in gates; stabilize distributions (ADR-0005)
- ci: GitHub security fetcher + diagnostics; remediation planner; guard:health writes offline stub (ADR-0003)
- regex: linear-time replacements to avoid ReDoS in PRD chunk fixers (ADR-0005)
- e2e: add framerate-stability project; immediate UI feedback + preloading for perf smoke; thresholds green
- db: checkpoint script auto-creates default DB if missing; strict param validation preserved
- docs:score gate wired to stable base file
- infra: add quality-gates.json; add ASCII/BOM scan/fix scripts

Refs: ADR-0002-electron-security, ADR-0003-observability-release-health, ADR-0005-quality-gates

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,11 @@ logs/
 job-*.log
 run-*.zip
 pulls.html
+frame-report.json
+tests/artifacts/
+invalid-path.db
+non-existent.db
+gametp-ai-bot.pem
 
 # Dependencies & caches
 node_modules/
