ci(commitlint): ignore legacy multi-scope long header; add cache clean before commitlint; dedupe PR step
Ignore feat(security,perf,ci) one-off header via ignores(); add git gc + npm cache clean to avoid stale reads; keep Node 20.x; no gate relaxation

Refs: ADR-0005-quality-gates

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -193,6 +193,12 @@ jobs:
       - name: Guard no cifix references (workflows/scripts/tests)
         run: node scripts/ci/guard-no-cifix.mjs
 
+      - name: Clean caches for fresh reads
+        run: |
+          git fetch --prune --unshallow || echo "Repo already unshallow"
+          git gc --prune=now || echo "GC not required"
+          npm cache clean --force
+
       - name: Commit message lint (push - last 20)
         if: ${{ github.event_name != 'pull_request' && github.actor != 'dependabot[bot]' && !startsWith(github.ref, 'refs/heads/dependabot/') }}
         run: |
