--- a/package.json
+++ b/package.json
@@ -281,6 +281,9 @@
                       "socks":  "^2.8.7",
                       "socks-proxy-agent":  "^8.0.5",
                       "cross-spawn":  "^7.0.6",
-                      "foreground-child":  "^3.3.1"
+                      "foreground-child":  "^3.3.1",
+                      "debug": "^4.3.7",
+                      "semver": "^7.6.3",
+                      "qs": "^6.14.2"
                   }
 }
