--- a/.github/workflows/pr-gatekeeper.yml
+++ b/.github/workflows/pr-gatekeeper.yml
@@ -43,6 +43,21 @@ jobs:
         with:
           node-version: '22.x'
 
+      - name: Guard JSON BOM (Windows/Python)
+        run: npm run guard:bom:json
+
+      - name: Security audit snapshot (npm)
+        run: py -3 scripts/ci/run_npm_audit.py
+
+      - name: Upload security audit logs
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: pr-security-audit-logs
+          path: |
+            logs/**/security/*.json
+          retention-days: 7
+
       - name: ESLint pre-fix (non-blocking)
         if: runner.os == 'Windows'
         uses: ./.github/actions/eslint-prefx
