--- a/.github/workflows/pr-performance-check.yml
+++ b/.github/workflows/pr-performance-check.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v6.0.0
         with:
-          node-version: '22'
+          node-version: '22.x'
           cache: 'npm'
 
       - name: Install dependencies (Hardened)
