--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,7 +58,7 @@ jobs:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v6.0.0
         with:
-          node-version: '22'
+          node-version: '22.x'
           cache: 'npm'
       - name: Guard JSON BOM (Windows/Python)
         run: npm run guard:bom:json
