--- a/.github/actions/npm-install/action.yml
+++ b/.github/actions/npm-install/action.yml
@@ -60,84 +60,13 @@ runs:
         "mode=$mode" | Out-File -FilePath $env:GITHUB_OUTPUT -Append -Encoding utf8
         Write-Host ("[npm-install] logs: {0} | mode: {1}" -f $logs, $mode)
 
-    - name: Install (lean/full with retries)
+    - name: Install via Node helper (lean/full)
       shell: pwsh
       working-directory: ${{ inputs.working-directory }}
       run: |
         $mode = '${{ steps.meta.outputs.mode }}'
-        $logs = '${{ steps.meta.outputs.logs-dir }}'
-        $logFile = Join-Path $logs 'npm_install.log'
-        Write-Host ("Starting npm install (mode={0})..." -f $mode)
-        # Baseline npm environment
-        $env:NPM_CONFIG_MAXSOCKETS = '8'
-        $env:NPM_CONFIG_FUND = 'false'
-        $env:NPM_CONFIG_AUDIT = 'false'
-        $env:NPM_CONFIG_PROGRESS = 'false'
-        npm config set fund false --location=project | Out-Null
-        npm config set audit false --location=project | Out-Null
-        npm config set legacy-peer-deps true --location=project | Out-Null
-        npm config set fetch-retries 5 --location=project | Out-Null
-        npm config set fetch-retry-maxtimeout 600000 --location=project | Out-Null
-        npm config set fetch-retry-mintimeout 20000 --location=project | Out-Null
-
-        function Invoke-Npm([string[]]$nargs) {
-          $global:LASTEXITCODE = 0
-          # Resolve npm executable explicitly (prefer npm.cmd on Windows)
-          $npmExe = (Get-Command npm.cmd -ErrorAction SilentlyContinue).Source
-          if (-not $npmExe) { $npmExe = (Get-Command npm -ErrorAction Stop).Source }
-          Write-Host ("[npm-install] running: npm {0}" -f ($nargs -join ' '))
-          & $npmExe @nargs 2>&1 | Tee-Object -FilePath $logFile -Append | Out-Host
-          if ($null -eq $LASTEXITCODE) { return 0 }
-          return [int]$LASTEXITCODE
-        }
-
-        $attempts = @('', '--maxsockets=5', '--maxsockets=1', '')
-        $success = $false
-        $start = Get-Date
-
-        if ($mode -eq 'full') {
-          for ($i=0; $i -lt $attempts.Count; $i++) {
-            $arg = $attempts[$i]
-            $common = @('ci')
-            if ($arg) { $common = $common + @($arg) }
-            $code = Invoke-Npm $common
-            if ($code -eq 0) { $success = $true; break }
-            if ($i -lt ($attempts.Count-1)) {
-              $sleep = 15 * ($i+1)
-              Write-Warning ("Attempt {0} failed (code={1}). Sleeping {2}s..." -f ($i+1), $code, $sleep)
-              Start-Sleep -Seconds $sleep
-            }
-          }
-          if (-not $success) {
-            Write-Warning "npm ci failed after retries. Falling back to 'npm install' (full)..."
-            $code = Invoke-Npm @('install','--no-audit','--fund=false','--prefer-offline')
-            if ($code -ne 0) { Write-Error "npm install fallback failed (exit=$code)"; exit $code } else { $success = $true }
-          }
-        } else {
-          # lean mode: ignore-scripts and omit optional to avoid heavy postinstalls
-          for ($i=0; $i -lt $attempts.Count; $i++) {
-            $arg = $attempts[$i]
-            $common = @('ci','--ignore-scripts','--omit=optional')
-            if ($arg) { $common = $common + @($arg) }
-            $code = Invoke-Npm $common
-            if ($code -eq 0) { $success = $true; break }
-            if ($i -lt ($attempts.Count-1)) {
-              $sleep = 15 * ($i+1)
-              Write-Warning ("Attempt {0} failed (code={1}). Sleeping {2}s..." -f ($i+1), $code, $sleep)
-              Start-Sleep -Seconds $sleep
-            }
-          }
-          if (-not $success) {
-            Write-Warning "npm ci (lean) failed. Falling back to 'npm install --ignore-scripts --omit=optional'..."
-            $code = Invoke-Npm @('install','--ignore-scripts','--omit=optional','--no-audit','--fund=false','--prefer-offline')
-            if ($code -ne 0) { Write-Error "npm install fallback (lean) failed (exit=$code)"; exit $code } else { $success = $true }
-          }
-        }
-
-        $dur = [int]((Get-Date) - $start).TotalSeconds
-        Write-Host ("SUCCESS: npm install completed (mode={0}) in {1}s" -f $mode, $dur)
-        if ($env:GITHUB_OUTPUT) { "install_duration_seconds=$dur" | Out-File -FilePath $env:GITHUB_OUTPUT -Append -Encoding utf8 }
-        exit 0
+        Write-Host ("[npm-install] invoking Node helper (mode={0})" -f $mode)
+        node scripts/ci/npm-install.mjs --cwd . --mode $mode
 
     - name: Ensure Rollup native package (win32-x64)
       shell: pwsh
